feat: add endpoint for loading unsorted tasks (without status)
