# src/main/java/de/mueller_constantin/taskcare/api/presentation/rest/v1/dto/TaskDto.java
@@ -24,6 +24,7 @@ public class TaskDto {
     private String statusUpdatedAt;
     private String assigneeId;
     private String createdAt;
+    private String updatedAt;
     private List<String> componentIds;
     private String dueDate;
     private String priority;
